Fix .field-box broken on chrome. #65

--- a/bootstrap_admin/static/admin/css/forms.css
+++ b/bootstrap_admin/static/admin/css/forms.css
@@ -37,7 +37,7 @@
   padding-top: 20px;
 }
 .form-row.field-box {
-  clear: unset;
+  clear: none;
 }
 
 .list-group {
